# 22_CapstoneDesign

./: README.md  package-lock.json
BACKEND/: memo.txt  test.txt
BACKEND/DeploymentTest/: README.md  nginx.conf
BACKEND/DeploymentTest/FlaskTest3/: app.py  pyproject.toml
BACKEND/DeploymentTest/FlaskTest3/FlaskTest3/: app.py
BACKEND/DeploymentTest/FlaskTest3/FlaskTest3/apis/: __init__.py  example.py
BACKEND/DeploymentTest/FlaskTest3/FlaskTest3/model/: testModel.py
BACKEND/DeploymentTest/FlaskTest3/apis/: __init__.py  example.py
BACKEND/DeploymentTest/ReactTest/: package-lock.json
BACKEND/DynamicJS/flask1/: app.py  pyproject.toml
BACKEND/FlaskTest/: __init__.py  app.py  pyproject.toml
BACKEND/FlaskTest/blueprints/: dbExample1.py  httpMethod1.py  httpMethod2.py  menu.py
BACKEND/FlaskTest/example/: httpMethod1.html
BACKEND/FlaskTest2/: app.py  pyproject.toml
BACKEND/FlaskTest2/apis/: __init__.py  authExample.py  example1.py  fileUpload.py
BACKEND/FlaskTest2/model/: store.py
BACKEND/Prototype1/AdminClientExample/: index.html
BACKEND/Prototype1/PrototypeServer1/: .gitignore  pyproject.toml
BACKEND/Prototype1/PrototypeServer1/PrototypeServer1/: app.py
BACKEND/Prototype1/PrototypeServer1/PrototypeServer1/apis/: __init__.py  adminServer.py  cookieSet.py  imageServer.py  orderServer.py  storeServer.py
BACKEND/Prototype1/PrototypeServer1/PrototypeServer1/model/: __init__.py  models.py
BACKEND/Prototype1/PrototypeServer1/PrototypeServer1/tests/: test_main.py
BACKEND/PrototypeCopyForPyTest/: pyproject.toml
BACKEND/PrototypeCopyForPyTest/PrototypeServer1/: README.md  pyproject.toml
BACKEND/PrototypeCopyForPyTest/serverapp/: app.py  config.py
BACKEND/PrototypeServer1/: pyproject.toml
BACKEND/PrototypeServer1.0/: pyproject.toml
BACKEND/PrototypeServer1.0/apis/: __init__.py
BACKEND/PrototypeServer1/PrototypeServer1/: app.py
BACKEND/Study/1.0 From Scratch/: DBMS 간략하게 복습.md  Flask를 위한 꼭 알아야 할 파이썬 문법.md  Github 간단 사용법 예시.md  HTTP 1.1.md  가장 빠르게 Flask 프로젝트 만들어보기.md  초간단 백엔드 개발환경 세팅.md
BACKEND/Study/2.0 Core Framework API/: Database Control.md  (+3 more)
fe/: package-lock.json  package.json
fe/src/: App.jsx  index.css  index.jsx  setupProxy.js
front/: package.json
front/public/: index.html
front/src/: App.jsx
(+112 files in other folders)
