[tool.poetry]
name = "flasktest2"
version = "0.1.0"
description = ""
authors = ["greennarae <smk5647@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.2"
Werkzeug = "2.1.2"
flask-restx = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
