[tool.poetry]
name = "prototypeserver1-0"
version = "0.1.0"
description = ""
authors = ["greennarae <smk5647@gmail.com>"]
readme = "README.md"
packages = [{include = "prototypeserver1"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
