[tool.poetry]
name = "prototypeserver1"
version = "0.1.0"
description = ""
authors = ["greennarae <smk5647@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.1.2"
flask-restx = "0.5.1"
PyMySQL = "^1.0.2"
gunicorn = "^20.1.0"
Werkzeug = "2.1.2"
flask-jwt-extended = "4.4.4"
sqlalchemy = "^1.4.43"
pytest = "^7.2.0"
qrcode = "^7.3.1"
pillow = "^9.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
